--- a/package.json
+++ b/package.json
@@ -125,5 +125,8 @@
       "node_modules/**",
       "typechain/**"
     ]
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.3"
   }
 }
