Updated new env file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 RPC_URL=<alchemy endpoint in mainnet>
 PRIVATE_KEY=<mainnet PRIVATE_KEY>
+PRIVATE_KEY2=<mainnet PRIVATE_KEY>
 ETHERSCAN_API_KEY=
-LOCAL_NODE=http://127.0.0.1:8545
+LOCAL_NODE="http://127.0.0.1:8545"
 
 # Contract Addresses
 CONTRACT_CURVES_ADDR=
