--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-RPC_URL=<alchemy endpoint in mainnet>
-PRIVATE_KEY=<mainnet PRIVATE_KEY>
-PRIVATE_KEY2=<mainnet PRIVATE_KEY>
+RPC_URL_MAINNET=<alchemy endpoint>
+RPC_URL_KOVAN=<infura endpoint>
+
+PRIVATE_KEY_MAINNET=<mainnet private key>
+PRIVATE_KEY2_MAINNET=<mainnet private key>
+PRIVATE_KEY_KOVAN=<kovan private key>
+PRIVATE_KEY2_KOVAN=<kovan private key>
 ETHERSCAN_API_KEY=
 LOCAL_NODE="http://127.0.0.1:8545"
 
