Stablecoin addresses moved from constants to .env

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,27 @@ CONTRACT_EURSTOUSDASSIMILATOR_ADDR=
 CONTRACT_XSGDTOUSDASSIMILATOR_ADDR=
 CONTRACT_CURVE_FACTORY_ADDR=
 CONTRACT_ROUTER_ADDR=
+
+# Tokens
+TOKENS_XSGD_MAINNET_ADDR=
+TOKENS_XSGD_MAINNET_MINTER_ADDR=
+TOKENS_EURS_MAINNET_ADDR=
+TOKENS_EURS_MAINNET_MINTER_ADDR=
+TOKENS_CADC_MAINNET_ADDR=
+TOKENS_CADC_MAINNET_MINTER_ADDR=
+TOKENS_USDC_MAINNET_ADDR=
+TOKENS_USDC_MAINNET_MINTER_ADDR=
+
+TOKENS_XSGD_KOVAN_ADDR=
+TOKENS_XSGD_KOVAN_MINTER_ADDR=
+TOKENS_EURS_KOVAN_ADDR=
+TOKENS_EURS_KOVAN_MINTER_ADDR=
+TOKENS_CADC_KOVAN_ADDR=
+TOKENS_CADC_KOVAN_MINTER_ADDR=
+TOKENS_USDC_KOVAN_ADDR=
+TOKENS_USDC_KOVAN_MINTER_ADDR=
+
+TOKENS_XSGD_DECIMALS=
+TOKENS_EURS_DECIMALS=
+TOKENS_CADC_DECIMALS=
+TOKENS_USDC_DECIMALS=
