BSC test and main net configs

--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,19 @@ TOKENS_CADC_KOVAN_MINTER_ADDR=
 TOKENS_USDC_KOVAN_ADDR=
 TOKENS_USDC_KOVAN_MINTER_ADDR=
 
+TOKENS_USDC_BSC_ADDR=
+TOKENS_USDC_BSC_MINTER_ADDR=
+TOKENS_JPY_BSC_ADDR=
+TOKENS_JPY_BSC_MINTER_ADDR=
+
 TOKENS_XSGD_DECIMALS=
 TOKENS_EURS_DECIMALS=
 TOKENS_CADC_DECIMALS=
 TOKENS_USDC_DECIMALS=
+
+# Mnemonics
+BSC_MAINNET_MNEMONIC=
+BSC_TESTNET_MNEMONIC=
+
+BSC_URL_MAINNET=https://bsc-dataseed.binance.org/
+BSC_URL_TESTNET=https://data-seed-prebsc-1-s1.binance.org:8545
