--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ web_modules/
 # dotenv environment variables file
 .env
 .env.test
+.env.localhost
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -120,3 +121,5 @@ artifacts
 typechain
 
 .vscode/
+
+.DS_Store
