--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "compile": "hardhat compile",
     "clean": "hardhat clean",
     "test": "hardhat test",
+    "scaffold": "hardhat run scripts/testnet/scaffold.ts",
+    "deploy:1": "hardhat run scripts/01-deploy-factory.ts",
+    "deploy:2": "hardhat run scripts/02-deploy-assimilators.ts",
+    "deploy:3": "hardhat run scripts/03-deploy-fixes.ts",
+    "deploy:4": "hardhat run scripts/04-new-curves.ts",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
