--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:local:2": "hardhat run scripts/02-deploy-assimilators.ts --network localhost",
     "deploy:local:3": "hardhat run scripts/03-deploy-fixes.ts --network localhost",
     "deploy:local:4": "hardhat run scripts/04-new-curves.ts --network localhost",
+    "deploy:local:5": "hardhat run scripts/05-deploy-zap.ts --network localhost",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
