--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "scaffold:local": "yarn hh:run scripts/testnet/scaffold.ts --network localhost",
     "deploy:local:1": "hardhat run scripts/01-deploy-factory.ts --network localhost",
     "deploy:local:2": "hardhat run scripts/02-deploy-assimilators.ts --network localhost",
-    "deploy:local:3": "hardhat run scripts/03-deploy-fixes.ts --network localhost",
-    "deploy:local:4": "hardhat run scripts/04-new-curves.ts --network localhost",
-    "deploy:local:5": "hardhat run scripts/05-deploy-zap.ts --network localhost",
+    "deploy:local:3": "hardhat run scripts/03-new-curves.ts --network localhost",
+    "deploy:local:4": "hardhat run scripts/04-deploy-zap.ts --network localhost",
+    "deploy:local:all": "yarn deploy:local:1 && yarn deploy:local:2 && deploy:local:3 && deploy:local:4",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
