--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "hardhat": "^2.2.0",
     "hardhat-typechain": "^0.3.5",
     "husky": "^5.0.8",
+    "mkdirp": "^1.0.4",
     "ora": "^5.4.0",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
