--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ web_modules/
 # dotenv environment variables file
 .env
 .env.test
+.env.kovan.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -123,6 +124,8 @@ typechain
 
 .DS_Store
 
+
 # Contract config
+scripts/deployed_contract_logs/localhost
 scripts/config/factory_deployed.json
 scripts/config/assimilators_deployed.json
