--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "deploy:local:3": "hardhat run scripts/03-new-curves.ts --network localhost",
     "deploy:local:4": "hardhat run scripts/04-deploy-zap.ts --network localhost",
     "deploy:local:all": "yarn deploy:local:1 && yarn deploy:local:2 && yarn deploy:local:3 && yarn deploy:local:4",
+    "deploy:kovan:1": "hardhat run scripts/01-deploy-factory.ts --network kovan",
+    "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
+    "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
+    "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
+    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
