- etherscan config for verification - verify script - zap script config

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ REMOTE_URL=
 RPC_URL=
 MNEMONIC=
 PRIVATE_KEY=
+ETHERSCAN_API_KEY=
 
 ORACLES_CADC_USD=0xa34317DB73e77d453b1B8d04550c44D10e981C8e
 ORACLES_EURS_USD=0xb49f677943BC038e9857d61E7d053CaA2C1734C1
