--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ typechain
 scripts/deployed_contract_logs/localhost
 scripts/config/factory_deployed.json
 scripts/config/assimilators_deployed.json
+scripts/config/zap_deployed.json
