--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
     "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
-    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
+    "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
+    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4 && yarn deploy:kovan:verify",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@ethersproject/abstract-provider": "^5.0.10",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.3.0",
     "@typechain/ethers-v5": "^6.0.4",
