--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
     "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4 && yarn deploy:kovan:verify",
+    "deploy:mainnet:1": "hardhat run scripts/01-deploy-factory.ts --network mainnet",
+    "deploy:mainnet:2": "hardhat run scripts/02-deploy-assimilators.ts --network mainnet",
+    "deploy:mainnet:3": "hardhat run scripts/03-new-curves.ts --network mainnet",
+    "deploy:mainnet:4": "hardhat run scripts/04-deploy-zap.ts --network mainnet",
+    "deploy:mainnet:verify": "hardhat run scripts/00-verify.ts --network mainnet",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
@@ -59,6 +64,7 @@
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.26",
     "hardhat": "^2.2.0",
+    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
     "husky": "^5.0.8",
     "mkdirp": "^1.0.4",
