--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-RPC_URL=
-MNEMONIC=
+INFURA_PROJECT_ID=
+ALCHEMY_PROJECT_ID=
+MNEMONIC="myth like bonus scare over problem client lizard pioneer submit female collect"
 ETHERSCAN_API_KEY=
 
-ORACLES_CADC_USD=0xa34317DB73e77d453b1B8d04550c44D10e981C8e
-ORACLES_EURS_USD=0xb49f677943BC038e9857d61E7d053CaA2C1734C1
-ORACLES_USDC_USD=0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6
-ORACLES_XSGD_USD=0xe25277fF4bbF9081C75Ab0EB13B4A13a721f3E13
+ORACLES_CADC_USD=
+ORACLES_EURS_USD=
+ORACLES_USDC_USD=
+ORACLES_SGD_USD=
 
-TOKEN_USDC=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
-TOKEN_EURS=0xdB25f211AB05b1c97D595516F45794528a807ad8
-TOKEN_CADC=0xcaDC0acd4B445166f12d2C07EAc6E2544FbE2Eef
-TOKEN_XSGD=0x70e8dE73cE538DA2bEEd35d14187F6959a8ecA96
+TOKEN_USDC=
+TOKEN_EURS=
+TOKEN_CADC=
+TOKEN_XSGD=
 
-GOVERNANCE_ADDRESS=0x27E843260c71443b4CC8cB6bF226C3f77b9695AF
+GOVERNANCE_ADDRESS=
 
 DIMENSION_ALPHA=0.8
 DIMENSION_BETA=0.5
