--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,5 @@ typechain
 scripts/deployed_contract_logs/localhost
 scripts/deployed_contract_logs/kovan
 
-scripts/config/factory_deployed.json
-scripts/config/assimilators_deployed.json
-scripts/config/zap_deployed.json
+scripts/config/kovan
+scripts/config/localhost
