--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
-    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4 && yarn deploy:kovan:verify",
+    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
     "deploy:mainnet:1": "hardhat run scripts/01-deploy-factory.ts --network mainnet",
     "deploy:mainnet:2": "hardhat run scripts/02-deploy-assimilators.ts --network mainnet",
     "deploy:mainnet:3": "hardhat run scripts/03-new-curves.ts --network mainnet",
     "deploy:mainnet:4": "hardhat run scripts/04-deploy-zap.ts --network mainnet",
     "deploy:mainnet:verify": "hardhat run scripts/00-verify.ts --network mainnet",
+    "deploy:matic:1": "hardhat run scripts/01-deploy-factory.ts --network matic",
+    "deploy:matic:2": "hardhat run scripts/02-deploy-assimilators.ts --network matic",
+    "deploy:matic:3": "hardhat run scripts/03-new-curves.ts --network matic",
+    "deploy:matic:4": "hardhat run scripts/04-deploy-zap.ts --network matic",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
