- .env.matic.example update - package json script for deposit and swap - scripts' execution time log - add liquidity script try catch for execution time log

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
     "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
+    "deploy:kovan:deposit": "hardhat run scripts/test/add-liquidity.ts --network kovan",
+    "deploy:kovan:swap": "hardhat run scripts/test/swap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
     "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
     "deploy:mainnet:1": "hardhat run scripts/01-deploy-factory.ts --network mainnet",
@@ -30,6 +32,8 @@
     "deploy:matic:2": "hardhat run scripts/02-deploy-assimilators.ts --network matic",
     "deploy:matic:3": "hardhat run scripts/03-new-curves.ts --network matic",
     "deploy:matic:4": "hardhat run scripts/04-deploy-zap.ts --network matic",
+    "deploy:matic:deposit": "hardhat run scripts/test/add-liquidity.ts --network matic",
+    "deploy:matic:swap": "hardhat run scripts/test/swap.ts --network matic",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
