--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ web_modules/
 .env.kovan.example
 .env.mainnet.example
 .env.matic.example
+env_examples
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
