--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
     "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
-    "deploy:kovan:deposit": "hardhat run scripts/test/add-liquidity.ts --network kovan",
+    "deploy:kovan:deposit": "hardhat run scripts/test/liquidity-add.ts --network kovan",
+    "deploy:kovan:withdraw": "hardhat run scripts/test/liquidity-withdraw.ts --network kovan",
     "deploy:kovan:swap": "hardhat run scripts/test/swap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
     "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
@@ -32,7 +33,8 @@
     "deploy:matic:2": "hardhat run scripts/02-deploy-assimilators.ts --network matic",
     "deploy:matic:3": "hardhat run scripts/03-new-curves.ts --network matic",
     "deploy:matic:4": "hardhat run scripts/04-deploy-zap.ts --network matic",
-    "deploy:matic:deposit": "hardhat run scripts/test/add-liquidity.ts --network matic",
+    "deploy:matic:deposit": "hardhat run scripts/test/liquidity-add.ts --network matic",
+    "deploy:matic:withdraw": "hardhat run scripts/test/liquidity-withdraw.ts --network matic",
     "deploy:matic:swap": "hardhat run scripts/test/swap.ts --network matic",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
