- .env.example update - verify script log display

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,21 @@
-EVM_NETWORK=kovan
+ENV=mainnet
 INFURA_PROJECT_ID=
 ALCHEMY_PROJECT_ID=
-MNEMONIC=
+
+MNEMONIC="myth like bonus scare over problem client lizard pioneer submit female collect"
 ETHERSCAN_API_KEY=
 
-ORACLES_USDC_USD=0x9211c6b3BF41A10F78539810Cf5c64e1BB78Ec60
-ORACLES_EURS_USD=0x0c15Ab9A0DB086e062194c273CC79f41597Bbf13
-ORACLES_CADC_USD=
-ORACLES_SGD_USD=
+ORACLES_USDC_USD=0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6
+ORACLES_EURS_USD=0xb49f677943BC038e9857d61E7d053CaA2C1734C1
 
-TOKEN_USDC=0x12513dd17Ae75AF37d9eb21124f98b04705Be906
-TOKEN_EURS=0x7bcFAF04C9BAD18e3A823740E0683A36426BB0Fe
-TOKEN_CADC=
-TOKEN_XSGD=
+TOKEN_ADDR_USDC=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
+TOKEN_ADDR_EURS=0xdB25f211AB05b1c97D595516F45794528a807ad8
 
 ASSIMILATORS=UsdcToUsdAssimilator,EursToUsdAssimilator
+TOKEN_NAME="USD Coin,EURS Statis"
+TOKEN_SYMBOL="USDC,EURS"
 
-GOVERNANCE_ADDRESS=0x52F200565581ae950C765B67F574CfC99F662657
+GOVERNANCE_ADDRESS=
 
 DIMENSION_ALPHA=0.8
 DIMENSION_BETA=0.5
@@ -26,7 +25,5 @@ DIMENSION_LAMBDA=0.3
 
 TOKENS_USDC_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
-TOKENS_CADC_DECIMALS=
-TOKENS_XSGD_DECIMALS=
 
 CONFIRM_ALL=y
