--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:local:2": "hardhat run scripts/02-deploy-assimilators.ts --network localhost",
     "deploy:local:3": "hardhat run scripts/03-new-curves.ts --network localhost",
     "deploy:local:4": "hardhat run scripts/04-deploy-zap.ts --network localhost",
+    "deploy:local:deposit": "hardhat run scripts/test/liquidity-add.ts --network localhost",
     "deploy:local:all": "yarn deploy:local:1 && yarn deploy:local:2 && yarn deploy:local:3 && yarn deploy:local:4",
     "deploy:kovan:1": "hardhat run scripts/01-deploy-factory.ts --network kovan",
     "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
