--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ ORACLES_EURS_USD=0xb49f677943BC038e9857d61E7d053CaA2C1734C1
 TOKEN_ADDR_USDC=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
 TOKEN_ADDR_EURS=0xdB25f211AB05b1c97D595516F45794528a807ad8
 
+CORE_CONTRACTS=Curves,Orchestrator,ProportionalLiquidity,Swaps,ViewLiquidity
 ASSIMILATORS=UsdcToUsdAssimilator,EursToUsdAssimilator
 TOKEN_NAME="USD Coin,EURS Statis"
 TOKEN_SYMBOL="USDC,EURS"
