- refactored network reference - list files helpers - refactored liquidity add script

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-ENV=mainnet
+ENV=kovan
 INFURA_PROJECT_ID=
 ALCHEMY_PROJECT_ID=
 
-MNEMONIC="myth like bonus scare over problem client lizard pioneer submit female collect"
+MNEMONIC=
 ETHERSCAN_API_KEY=
 
 ORACLES_USDC_USD=0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6
@@ -26,5 +26,7 @@ DIMENSION_LAMBDA=0.3
 
 TOKENS_USDC_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
+TOKENS_AUD_DECIMALS=6
+TOKENS_CHF_DECIMALS=18
 
 CONFIRM_ALL=y
