- env block number and block number logs - deleted deployed_contract_logs json files - hardhat version upgrade to london (2.5.0)

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-ENV=kovan
+ENV=mainnet
 INFURA_PROJECT_ID=
 ALCHEMY_PROJECT_ID=
 
 MNEMONIC=
 ETHERSCAN_API_KEY=
 
-ORACLES_USDC_USD=0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6
-ORACLES_EURS_USD=0xb49f677943BC038e9857d61E7d053CaA2C1734C1
+ORACLES_USDC_USD=
+ORACLES_EURS_USD=
 
-TOKEN_ADDR_USDC=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
-TOKEN_ADDR_EURS=0xdB25f211AB05b1c97D595516F45794528a807ad8
+TOKEN_ADDR_USDC=
+TOKEN_ADDR_EURS=
 
-CORE_CONTRACTS=Curves,Orchestrator,ProportionalLiquidity,Swaps,ViewLiquidity
-ASSIMILATORS=UsdcToUsdAssimilator,EursToUsdAssimilator
-TOKEN_NAME="USD Coin,EURS Statis"
-TOKEN_SYMBOL="USDC,EURS"
+CORE_CONTRACTS=
+ASSIMILATORS=
+TOKEN_NAME=
+TOKEN_SYMBOL=
 
 GOVERNANCE_ADDRESS=
 
@@ -30,3 +30,7 @@ TOKENS_AUD_DECIMALS=6
 TOKENS_CHF_DECIMALS=18
 
 CONFIRM_ALL=y
+
+# London Upgrade Mainnet: 12965000
+# works <= 12640151
+BLOCK_NUM=12640140
