--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint-config-prettier": "^7.2.0",
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.26",
-    "hardhat": "^2.2.0",
+    "hardhat": "2.5.0",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
     "husky": "^5.0.8",
