- .env.example update - rinkeby network config and deploy commands - curve weights params from .env - flexible returned accounts - liquidity add new curves - assimilator contracts safemath and decimals

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ CORE_CONTRACTS=
 ASSIMILATORS=
 TOKEN_NAME=
 TOKEN_SYMBOL=
+# null for USDC, it doesnt have a curve
+CURVE_WEIGHTS="null,24/76,50/50,50/50,50/50"
 
 GOVERNANCE_ADDRESS=
 
@@ -26,11 +28,11 @@ DIMENSION_LAMBDA=0.3
 
 TOKENS_USDC_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
-TOKENS_AUD_DECIMALS=6
+TOKENS_AUD_DECIMALS=18
 TOKENS_CHF_DECIMALS=18
 
 CONFIRM_ALL=y
 
 # London Upgrade Mainnet: 12965000
 # works <= 12640151
-BLOCK_NUM=12640140
+BLOCK_NO=12640140
