--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "deploy:kovan:swap": "hardhat run scripts/test/swap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
     "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
+    "deploy:rinkeby:1": "hardhat run scripts/01-deploy-factory.ts --network rinkeby",
+    "deploy:rinkeby:2": "hardhat run scripts/02-deploy-assimilators.ts --network rinkeby",
+    "deploy:rinkeby:3": "hardhat run scripts/03-new-curves.ts --network rinkeby",
+    "deploy:rinkeby:4": "hardhat run scripts/04-deploy-zap.ts --network rinkeby",
+    "deploy:rinkeby:deposit": "hardhat run scripts/test/liquidity-add.ts --network rinkeby",
     "deploy:mainnet:1": "hardhat run scripts/01-deploy-factory.ts --network mainnet",
     "deploy:mainnet:2": "hardhat run scripts/02-deploy-assimilators.ts --network mainnet",
     "deploy:mainnet:3": "hardhat run scripts/03-new-curves.ts --network mainnet",
