Feat: Arrow functions and fix tests

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ DIMENSION_BETA=0.5
 DIMENSION_MAX=0.15
 DIMENSION_EPSILON=0.0005
 DIMENSION_LAMBDA=0.3
+DIMENSION_GAMMA=0.1
 
 TOKENS_USDC_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
