--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - master
-      - dev
+      - develop
   pull_request:
     branches:
       - master
-      - dev
+      - develop
 
 jobs:
   integration-tests:
