Updated readme & package.json scripts for shorter commands

--- a/package.json
+++ b/package.json
@@ -12,31 +12,36 @@
     "scaffold:local": "yarn hh:run scripts/testnet/scaffold.ts --network localhost",
     "deploy:local:1": "hardhat run scripts/01-deploy-factory.ts --network localhost",
     "deploy:local:2": "hardhat run scripts/02-deploy-assimilators.ts --network localhost",
+    "deploy:local:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network localhost",
     "deploy:local:3": "hardhat run scripts/03-new-curves.ts --network localhost",
     "deploy:local:4": "hardhat run scripts/04-deploy-zap.ts --network localhost",
     "deploy:local:deposit": "hardhat run scripts/test/liquidity-add.ts --network localhost",
-    "deploy:local:all": "yarn deploy:local:1 && yarn deploy:local:2 && yarn deploy:local:3 && yarn deploy:local:4",
+    "deploy:local:all": "yarn deploy:local:1 && yarn deploy:local:2 && yarn deploy:local:assimilators && yarn deploy:local:3 && yarn deploy:local:4",
     "deploy:kovan:1": "hardhat run scripts/01-deploy-factory.ts --network kovan",
     "deploy:kovan:2": "hardhat run scripts/02-deploy-assimilators.ts --network kovan",
+    "deploy:kovan:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network kovan",
     "deploy:kovan:3": "hardhat run scripts/03-new-curves.ts --network kovan",
     "deploy:kovan:4": "hardhat run scripts/04-deploy-zap.ts --network kovan",
     "deploy:kovan:deposit": "hardhat run scripts/test/liquidity-add.ts --network kovan",
     "deploy:kovan:withdraw": "hardhat run scripts/test/liquidity-withdraw.ts --network kovan",
     "deploy:kovan:swap": "hardhat run scripts/test/swap.ts --network kovan",
     "deploy:kovan:verify": "hardhat run scripts/00-verify.ts --network kovan",
-    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:3 && yarn deploy:kovan:4",
+    "deploy:kovan:all": "yarn deploy:kovan:1 && yarn deploy:kovan:2 && yarn deploy:kovan:assimilators && yarn deploy:kovan:3 && yarn deploy:kovan:4",
     "deploy:rinkeby:1": "hardhat run scripts/01-deploy-factory.ts --network rinkeby",
     "deploy:rinkeby:2": "hardhat run scripts/02-deploy-assimilators.ts --network rinkeby",
+    "deploy:rinkeby:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network rinkeby",
     "deploy:rinkeby:3": "hardhat run scripts/03-new-curves.ts --network rinkeby",
     "deploy:rinkeby:4": "hardhat run scripts/04-deploy-zap.ts --network rinkeby",
     "deploy:rinkeby:deposit": "hardhat run scripts/test/liquidity-add.ts --network rinkeby",
     "deploy:mainnet:1": "hardhat run scripts/01-deploy-factory.ts --network mainnet",
     "deploy:mainnet:2": "hardhat run scripts/02-deploy-assimilators.ts --network mainnet",
+    "deploy:mainnet:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network mainnet",
     "deploy:mainnet:3": "hardhat run scripts/03-new-curves.ts --network mainnet",
     "deploy:mainnet:4": "hardhat run scripts/04-deploy-zap.ts --network mainnet",
     "deploy:mainnet:verify": "hardhat run scripts/00-verify.ts --network mainnet",
     "deploy:matic:1": "hardhat run scripts/01-deploy-factory.ts --network matic",
     "deploy:matic:2": "hardhat run scripts/02-deploy-assimilators.ts --network matic",
+    "deploy:matic:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network matic",
     "deploy:matic:3": "hardhat run scripts/03-new-curves.ts --network matic",
     "deploy:matic:4": "hardhat run scripts/04-deploy-zap.ts --network matic",
     "deploy:matic:deposit": "hardhat run scripts/test/liquidity-add.ts --network matic",
