updated block no to a new one

--- a/.env.example
+++ b/.env.example
@@ -35,4 +35,5 @@ CONFIRM_ALL=y
 
 # London Upgrade Mainnet: 12965000
 # works <= 12640151
-BLOCK_NO=12640140
+# Note: new block nos are working when EURS owner address is changed to the new owner
+BLOCK_NO=13453242
