.env.example and README.me update

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,75 @@
-ENV=mainnet
+# Tests only need these three variables
 INFURA_PROJECT_ID=
 ALCHEMY_PROJECT_ID=
-
 MNEMONIC=
+
+# Deployment
+ENV=
 ETHERSCAN_API_KEY=
 
+
+# ---- ORACLES
 ORACLES_USDC_USD=
-ORACLES_EURS_USD=
+ORACLES_USDT_USD=
 
+ORACLES_CAD_USD=
+ORACLES_AUD_USD=
+ORACLES_GBP_USD=
+
+ORACLES_SGD_USD=
+ORACLES_EUR_USD=
+
+ORACLES_TRYB_USD=
+ORACLES_PHP_USD=
+
+ORACLES_CHF_USD=
+# ---- ORACLES
+
+
+# ---- TOKEN ADDRESSES
 TOKEN_ADDR_USDC=
+TOKEN_ADDR_USDT=
+
+TOKEN_ADDR_TCAD=
+TOKEN_ADDR_TAUD=
+TOKEN_ADDR_TGBP=
+
+TOKEN_ADDR_XSGD=
 TOKEN_ADDR_EURS=
+TOKEN_ADDR_CADC=
 
-CORE_CONTRACTS=
-ASSIMILATORS=
-TOKEN_NAME=
-TOKEN_SYMBOL=
-# null for USDC, it doesnt have a curve
-CURVE_WEIGHTS="null,24/76,50/50,50/50,50/50"
+TOKEN_ADDR_TRYB=
+TOKEN_ADDR_PHP=
 
-GOVERNANCE_ADDRESS=
+TOKEN_ADDR_JCHF=
+# ---- TOKEN ADDRESSES
 
-DIMENSION_ALPHA=0.8
-DIMENSION_BETA=0.5
-DIMENSION_MAX=0.15
-DIMENSION_EPSILON=0.0005
-DIMENSION_LAMBDA=0.3
 
+# ---- TOKEN DECIMALS
 TOKENS_USDC_DECIMALS=6
+TOKENS_USDT_DECIMALS=6
+
+TOKENS_TCAD_DECIMALS=18
+TOKENS_TAUD_DECIMALS=18
+TOKENS_TGBP_DECIMALS=18
+
+TOKENS_XSGD_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
-TOKENS_AUD_DECIMALS=18
-TOKENS_CHF_DECIMALS=18
+TOKENS_CADC_DECIMALS=18
+
+TOKEN_TRYB_DECIMALS=6
+TOKEN_PHP_DECIMALS=18
+
+TOKEN_JCHF_DECIMALS=18
+# ---- TOKEN DECIMALS
+
+
+# ---- AMM Contracts
+CORE_CONTRACTS=Curves,Orchestrator,ProportionalLiquidity,Swaps,ViewLiquidity,Zap
+
+# Assimilator and curve params
+ASSIMILATOR_PAIRS=EURS_USDC,JCHF_USDC,PHP_USDC,TAUD_USDC,TCAD_USDC,TGBP_USDC,TRYB_USDC,XSGD_USDC
+LPT_SYMBOL=HLP
+# ---- AMM Contracts
 
 CONFIRM_ALL=y
-
-# London Upgrade Mainnet: 12965000
-# works <= 12640151
-# Note: new block nos are working when EURS owner address is changed to the new owner
-BLOCK_NO=13453242
