- env token decimal fixes - update readme - returned back deployer balance in curve script

--- a/.env.example
+++ b/.env.example
@@ -57,8 +57,8 @@ TOKENS_XSGD_DECIMALS=6
 TOKENS_EURS_DECIMALS=2
 TOKENS_CADC_DECIMALS=18
 
-TOKEN_TRYB_DECIMALS=6
-TOKEN_PHP_DECIMALS=18
+TOKENS_TRYB_DECIMALS=6
+TOKENS_PHP_DECIMALS=18
 
 TOKEN_JCHF_DECIMALS=18
 # ---- TOKEN DECIMALS
