- deployment test file using new config - update ci workflow, two tests - new hh fork config for tests - test commands for different networks - config importer util refactor - temporarily removed cadc and eurs tokens and assimilator tests - WIP: end to end tests for deposit, swap, withdraw

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,7 +25,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: yarn install
-      - run: yarn compile && yarn test
+      - run: yarn compile && yarn test:mainnet
+        env:
+          INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
+          ALCHEMY_PROJECT_ID: ${{ secrets.ALCHEMY_PROJECT_ID }}
+          MNEMONIC: ${{ secrets.MNEMONIC }}
+      - run: yarn test:matic
         env:
           INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
           ALCHEMY_PROJECT_ID: ${{ secrets.ALCHEMY_PROJECT_ID }}
