--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "hh:node": "hardhat node",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "test": "hardhat test",
+    "test:mainnet": "NETWORK=mainnet hardhat test",
+    "test:matic": "NETWORK=matic hardhat test",
+    "test:kovan": "NETWORK=kovan hardhat test",
     "scaffold:local": "yarn hh:run scripts/testnet/scaffold.ts --network localhost",
     "deploy:local:1": "hardhat run scripts/01-deploy-factory.ts --network localhost",
     "deploy:local:2": "hardhat run scripts/02-deploy-assimilators.ts --network localhost",
@@ -166,5 +168,6 @@
       "node_modules/**",
       "typechain/**"
     ]
-  }
+  },
+  "devDependencies": {}
 }
