add verifying command shortcut for matic and arbitrum

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "deploy:matic:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network matic",
     "deploy:matic:3": "hardhat run scripts/03-new-curves.ts --network matic",
     "deploy:matic:4": "hardhat run scripts/04-deploy-zap.ts --network matic",
+    "deploy:matic:verify": "hardhat run scripts/00-verify.ts --network matic",
     "deploy:matic:deposit": "hardhat run scripts/test/liquidity-add.ts --network matic",
     "deploy:matic:withdraw": "hardhat run scripts/test/liquidity-withdraw.ts --network matic",
     "deploy:matic:swap": "hardhat run scripts/test/swap.ts --network matic",
@@ -57,6 +58,7 @@
     "deploy:arb:assimilators": "hardhat run scripts/halo/deployAssimilators.ts --network arbitrum",
     "deploy:arb:3": "hardhat run scripts/03-new-curves.ts --network arbitrum",
     "deploy:arb:4": "hardhat run scripts/04-deploy-zap.ts --network arbitrum",
+    "deploy:arb:verify": "hardhat run scripts/00-verify.ts --network arbitrum",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --ext .js,.ts .",
