--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "ethers": "^5.0.26",
     "hardhat": "2.5.0",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-tracer": "^1.1.0-rc.6",
     "hardhat-typechain": "^0.3.5",
     "husky": "^5.0.8",
     "mkdirp": "^1.0.4",
